--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-experiments/__pycache__/
+.venv/
+.env
+cnn/__pycache__/
 common/__pycache__/
 nn/__pycache__/
-.env
-.venv/
-train_loss.png
+result.txt
